// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders active label 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "position": "absolute",
      "top": 16,
    }
  }
>
  <Text
    accessible={true}
    activeFontSize={12}
    allowFontScaling={true}
    baseColor="black"
    basePadding={4}
    baseSize={32}
    collapsable={undefined}
    ellipsizeMode="tail"
    errorColor="red"
    fontSize={16}
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(0, 0, 0, 0.38)",
        "fontSize": 12,
      }
    }
    tintColor="blue"
  >
    test
  </Text>
</View>
`;

exports[`renders errored label 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "position": "absolute",
      "top": 36,
    }
  }
>
  <Text
    accessible={true}
    activeFontSize={12}
    allowFontScaling={true}
    baseColor="black"
    basePadding={4}
    baseSize={32}
    collapsable={undefined}
    ellipsizeMode="tail"
    errorColor="red"
    fontSize={16}
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(213, 0, 0, 1)",
        "fontSize": 16,
      }
    }
    tintColor="blue"
  >
    test
  </Text>
</View>
`;

exports[`renders focused label 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "position": "absolute",
      "top": 16,
    }
  }
>
  <Text
    accessible={true}
    activeFontSize={12}
    allowFontScaling={true}
    baseColor="black"
    basePadding={4}
    baseSize={32}
    collapsable={undefined}
    ellipsizeMode="tail"
    errorColor="red"
    fontSize={16}
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(33, 150, 243, 1)",
        "fontSize": 12,
      }
    }
    tintColor="blue"
  >
    test
  </Text>
</View>
`;

exports[`renders label 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "position": "absolute",
      "top": 36,
    }
  }
>
  <Text
    accessible={true}
    activeFontSize={12}
    allowFontScaling={true}
    baseColor="black"
    basePadding={4}
    baseSize={32}
    collapsable={undefined}
    ellipsizeMode="tail"
    errorColor="red"
    fontSize={16}
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(0, 0, 0, 0.38)",
        "fontSize": 16,
      }
    }
    tintColor="blue"
  >
    test
  </Text>
</View>
`;

exports[`renders restricted label 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "position": "absolute",
      "top": 36,
    }
  }
>
  <Text
    accessible={true}
    activeFontSize={12}
    allowFontScaling={true}
    baseColor="black"
    basePadding={4}
    baseSize={32}
    collapsable={undefined}
    ellipsizeMode="tail"
    errorColor="red"
    fontSize={16}
    numberOfLines={1}
    style={
      Object {
        "color": "rgb(213, 0, 0)",
        "fontSize": 16,
      }
    }
    tintColor="blue"
  >
    test
  </Text>
</View>
`;
